# coorl

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: args.rs  client.rs  main.rs  output.rs  request.rs
tests/: integration_test.rs
